[package]
name = "kademlia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
rocksdb = "0.22.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
crossbeam-channel = "0.5.8"
num_cpus = "1.16.0"
dashmap = "5.4"
tokio = { version = "1.16.0", features = ["full"] }
futures = "0.3.31"
